tests/NormalTests/paczka1/fuzzy1/76278416.err
Error in line 1: A432 A815 59,9
Error in line 5: A432 S751 28,1
Error in line 6: fyLqq36 A815 69,5
Error in line 28: eH4x11I S751 -3,4
Error in line 30: A432 A432 22,2
